--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "server": "node server.js",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -12,13 +13,18 @@
     "@types/node": "18.15.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "ahooks": "^3.7.5",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "express": "^4.18.2",
     "ip": "^1.1.8",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
+    "typescript": "4.9.5",
+    "use-file-picker": "^1.5.2"
   },
   "devDependencies": {
     "@types/ip": "^1.1.0",
