--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "express": "^4.18.2",
     "ip": "^1.1.8",
     "next": "13.2.4",
+    "qrcode-terminal": "^0.12.0",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
+    "socket.io-p2p": "^2.2.0",
+    "socket.io-p2p-server": "^1.2.0",
     "typescript": "4.9.5",
     "use-file-picker": "^1.5.2"
   },
